examples/test/testpolicy13220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13220
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key14: value26
      key45: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value21
      podSelector:
        matchLabels:
          key27: value20
          key28: value36
          key47: value18
